I added nav, h1, sections and a footer

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>my-super-website</title>
+    <title>my-super-website-is-great</title>
   </head>
   <body>
+    <nav></nav>
+    <h1>Hello Wilders</h1>
+    <section></section>
+    <section></section>
+    <form action=""></form>
+    <footer></footer>
   
   </body>
 </html>
